--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "brace": "^0.11.1",
     "ramda": "^0.26.1",
     "react": "^16.6.3",
+    "react-ace": "^6.2.0",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
