--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "brace": "^0.11.1",
+    "expect": "^23.6.0",
+    "jest": "^23.6.0",
     "ramda": "^0.26.1",
     "react": "^16.6.3",
     "react-ace": "^6.2.0",
