--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "brace": "^0.11.1",
+    "classnames": "^2.2.6",
     "expect": "^23.6.0",
     "jest": "^23.6.0",
     "ramda": "^0.26.1",
