--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "brace": "^0.11.1",
     "classnames": "^2.2.6",
     "expect": "^23.6.0",
+    "gh-pages": "^2.0.1",
     "jest": "^23.6.0",
     "ramda": "^0.26.1",
     "react": "^16.6.3",
@@ -20,6 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "yarn build && gh-pages --dist build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -31,5 +33,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "homepage": "https://FujiHaruka.github.io/30-seconds-of-code-training/"
 }
