--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-share": "^2.4.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
     "store": "^2.0.12"
