--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react": "^16.6.3",
     "react-ace": "^6.2.0",
     "react-dom": "^16.6.3",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.1.1",
     "react-share": "^2.4.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
@@ -35,5 +35,16 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://FujiHaruka.github.io/30-seconds-of-code-training/"
+  "homepage": "https://FujiHaruka.github.io/30-seconds-of-code-training/",
+  "devDependencies": {
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-config-standard-jsx": "^7.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-standard": "^4.0.0"
+  }
 }
