--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "yarn build && gh-pages --dist build",
+    "snippets": "./scripts/snippets.sh",
+    "deploy": "yarn snippets && yarn build && gh-pages --dist build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
